index主页, doctype添加以及js文件引用语句的位置修改

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
+<!DOCTYPE html>
 <html lang="zh-CN">
-
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Lee">  
@@ -74,9 +74,8 @@
     <p>
         <q>纽臂大学校训：人人皆可纽臂</q> —— <cite>诸葛中天 绅士</cite> 
     </p>
-        
 
-</body>
+    
 <script src="js/main.js"></script>
-
+</body>
 </html>
