--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>观鸟网</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300|Cinzel+Decorative:700">
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300|Cinzel+Decorative:700"> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=ZCOOL+XiaoWei&amp;subset=chinese-simplified">
 
     <link rel="stylesheet" href="styles/style.css">
